themes/custom/movie_catalog/css/movie_catalog.css
/* reset */
body {
    background-color: rgb(0, 0, 0);
}
div, span, text, p, li, label, .field__label {
    color: white;
}
p {
    margin: 5px;
}
a, a:visited {
    color: #FFE800;
    text-decoration: none;
    font-family: 'Helvetica';
    font-size: 12pt;
}
ul {
    padding: 0;
}
li {
    list-style-type: none;
}
h1, h1 a,
h2, h2 a,
h3, h3 a {
    color: #FA8F41;
    font-variant: small-caps;
    font-weight: bold;
}
h1, h1 a {
    font-size: 17pt;
}
h2, h2 a {
    font-size: 15pt;
}
h3, h3 a {
    font-size: 14pt;
}
.l-header {
    height: 15px!important;
}
.site-name,
.site-logo {
    float: left;
}

.site-name {
    padding-left: 10px;
    padding: 12px 5px 1px 12px;
    margin: 0;
    line-height: 36px;
}
.site-name a {
    font-size: 44px;
    font-weight: bolder;
}
@media (min-width: 70em) {
    .has-sidebar-first .l-region--sidebar-first {
        width: 20%;
    }
}

@media (min-width: 70em) {
    .has-sidebar-first .l-content {
        width: 77%;
    }
}

/* admin menu*/
#admin-menu a,
#admin-menu span {
    font-family: arial;
    font-size: 12px;
}

/* drupal */
.messages--status, tr.ok {
    background-color: #394A26;
}


/* fields */
.field {
    clear: left;
    padding: 4px 5px;
}
.field--name-field-genres {
    margin: 13px 0;
}
.field--name-field-genres .field__item {
    float: left;
    margin-left: 5px;
    margin-bottom: 5px;
    padding: 5px 6px;
    border: 1px solid wheat;
    background: rgb(16, 0, 255);
}
.field--name-field-genres .field__item:hover {
    background: rgb(30, 105, 255);
    border: 1px solid #eff50b;
}

.node-readmore {
    float: right!important;
}
.view-genres h2 {
    font-variant: normal;
    font-size: 2pt;
    font-style: italic;
    font-weight: 100;
    padding: 1px;
}

#first-time {
    display: none;
}

/* pager */
.pager {
    clear: both;
    display: block;
}
.pager .pager-previous,
.pager .pager-next {
    padding: 5px;
    /* border: 1px solid; */
    font-weight: bolder;
}
.pager .pager-current {
    line-height: 29px;
}
.pager li {
    float: left;
    display: block;
}

/* block */
.block {
    clear: both;
    margin-top: 14px;
    background: rgb(55, 55, 55);
    padding: 5px;
    /* padding-bottom: 42px; */
}
.block h2 {
    margin: 2px 0 0 0;
}

#block-system-main-menu {
    float: right;
    background: none;
    margin: 0px;
    padding: 8px 0 0 0;
}
#block-system-main-menu ul {
    padding: 0;
    margin: 0;
}
#block-system-main-menu li {
    list-style-type: none;
}
#block-system-main-menu li a {
    font-size: 22px;
}

/* fields */
.field--name-field-cover img {
    border-top: 1px solid rgb(234, 230, 230);
    border-left: 1px solid rgb(228, 228, 228);
    border-right: 1px solid rgb(166, 166, 166);
    border-bottom: 1px solid rgb(166, 166, 166);
}

.field--name-field-cover,
.field--name-field-rating,
.field--name-field-genres {
    float: left;
    clear: none;
}

.node--movies .node__content .group-left {
    float: left;
}
.node--movies .node__content .group-right {
    float: left;
    width: auto;
    max-width: 400px;
}

.view-id-movies .views-row {
    float: left;
    width: auto;
    margin-bottom: 15px;
}
.view-id-movies .views-row header h2 {
    overflow: hidden;
    height: 20px;
}
.view-id-movies .views-row header h2 a {
    font-size: 16px;
    /* font-weight: 100; */
    color: #FFE800;
    padding-left: 2px;
}
.node--movies.node--compact .node__content {
    float: left;
    width: 170px;
    display: block;
    /* border: 1px solid; */
}
.node--movies.node--compact .node__content .field {
    margin: 0 auto;
    clear: both;
    width: 220px;
    float: none;
    padding: 0;
}

#block-views-movies-homepage.block {
    background: none;
}

.view-display-id-homepage .views-row {
    width: 163px;
    margin-right: 5px;
}

/* search */
ol.search-results {
    display: block;
    list-style-type: none;
    padding: 0;
}
.node--movies.node--search-results .node__content .group-right {
    max-width: 270px;
}
.node--movies.node--teaser .node__content .group-right {
    max-width: 270px;
}
#block-search-api-page-search {
    height: 59px;
    margin: 2px;
    padding: 1px 11px 6px 14px;
}
#block-search-api-page-search h2 {
    display: none;
}
#block-search-api-page-search .form-item-keys-1 input {
    width: 70%;
    height: 26px;
    float: left;
}
#block-search-api-page-search .form-submit {
    float: left;
    right: 1px;
    margin-left: 10px;
}

/* fields */
.field--name-field-countries .field__item {
    margin: 2px 11px 1px 0px;
}

/* buttons */
.form-submit {
    position: relative;
    /*width: 190px;*/
    /*margin: auto;*/
    padding: 2px 10px 2px 10px;
    margin: 1px 2px 1px 2px;
}

.form-submit,
.form-actions .form-submit {
    font-size: 16px;
    font-family: Arial;
    font-weight: normal;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    border: 1px solid white;
    padding: 5px 34px;
    text-decoration: none;
    background: -webkit-gradient(linear, left top, left bottom, color-stop(41%, #ffd500), color-stop(64%, #ffaa00));
    background: -moz-linear-gradient(center top, #ffd500 41%, #ffaa00 64%);
    background: -ms-linear-gradient(top, #ffd500 41%, #ffaa00 64%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd500', endColorstr='#ffaa00');
    background-color: #ffd500;
    color: black;
    display: inline-block;
    text-shadow: 0px 1px 0px #ded17c;
}

.form-actions .form-submit {
    margin-top: 10px;
    margin-bottom: 10px;
}

.form-submit:hover {
    background: -webkit-gradient(linear, left top, left bottom, color-stop(51%, #ffd500), color-stop(74%, #ffaa00));
    background: -moz-linear-gradient(center top, #ffd500 51%, #ffaa00 74%);
    background: -ms-linear-gradient(top, #ffd500 51%, #ffaa00 74%);
    -webkit-box-shadow: 1px 0px 6px 0px blue;
    -moz-box-shadow: 1px 0px 6px 0px blue;
    box-shadow: 1px 0px 6px 0px blue;
    color: blue;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffaa00', endColorstr='#ffd500');
    background-color: #ffaa00;
}

.form-submit:active {
    position: relative;
    top: 1px;
    left: 1px;
}

.views-exposed-form .views-exposed-widget .form-submit {
    margin-top: 2px;
}

